modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 Luis Fernando Alves
             </h1>
             <h2 class="titulo">
-                Analista de Dados | Power Bi | SQL | Desenvolvedor | Python | Javascript
+                Data Analyst | Developer
             </h2>
             <h3 class="contato">
                 <a href="tel:+5531989492805"></a>
