new file:   Luis.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">   
 </head>
 <body>
-    <main class="content">
+    <aside class="generalInfo">
         <div class="info">
-            <img src="" alt="Profile" />
-            <h1 class="nome">
+            <img class="image" src="Luis.png" alt="Profile" />
+            <h1 class="name">
                 Luis Fernando Alves
             </h1>
-            <h2 class="titulo">
+            <h2 class="title">
                 Data Analyst | Developer
             </h2>
-            <h3 class="contato">
+            <h3 class="contact">
                 <a href="tel:+5531989492805"></a>
                     <span class="fa fa-phone"></span>
                 </a>
@@ -29,74 +29,59 @@
                         <span class="fa fa-github"></span>
                 </a>
             </h3>
-        </div>
-        <nav class="nav" id="nav">
-            <span class="nav" id="nav1" href="#skils">
-                skils
-            </span>
-            <span class="nav" id="nav2" href="#experiencia">
-                experiencia
-            </span>
-            <span class="nav" id="nav3" href="#formacao">
-                formacao
-            </span>
-        </nav>
-        <div class="skils" id="skils">
-            <div class="sobre">
-                <p>Analista de Dados com proficiência avançada em Power BI, Report e SQL, além de conhecimento intermediário em Python, básico/intermediário em PHP e intermediário em Javascript. Ampla experiência no setor de TI.</p>
-            </div>
-            <div class="destaque">
-
-            </div>
-            <div class="certificados">
-
-            </div>
-            <div class="competencias">
-
-            </div>
-            <div class="cursos">
-
+            <div class="skills" id="skills">
+                <div class="about">
+                    <p>Data Analyst with advanced proficiency in Power BI, Report, and SQL, as well as intermediate knowledge in Python, basic/intermediate knowledge in PHP, and intermediate knowledge in JavaScript. Extensive experience in the IT sector.</p>
+                </div>
+                <div class="competencies">
+                    
+                </div>
             </div>
         </div>
-        <div class="experiencia">
-            <div class="exp1">
-                <h3>Analista de dados</h3>
-                <h4>Databit Tecnologia da Informação e Sistemas</h4>
-                <p>Responsável pela criação, planejamento e manutenção de Painéis e Dashboards, utilizando tanto o Power bi, Report e PHP. Realizando a criação de de consultas SQL com base em ETL, criação de consultas DAX e iniciando processo de inclusão e aprendizagem em Python para analise de dados.
-                    Criação de etiquetas utilizando o Bartender, baseado em consultas no banco de dados.</p>
+    </aside>
+    <main class="main">
+        <div class="expEdu">  
+            <div class="experience">
+                <h2>Experience</h2>
+                <div class="exp1">
+                    <h3>Data Analyst</h3>
+                    <h4>Databit Information Technology and Systems | February 2024 - November 2024 (9 months)</h4>
+                    <p>Responsible for creating, planning, and maintaining Dashboards and Panels, using Power BI, Report, and PHP. Creating SQL queries based on ETL, creating DAX queries, and starting the process of learning and implementing Python for data analysis. 
+                        Creating labels using Bartender, based on database queries.</p>
+                </div>
+                <div class="exp2">
+                    <h3>IT Support Analyst 2</h3>
+                    <h4>Dinamica Computer Import and Export Ltd | November 2023 - February 2024 (4 months)</h4>
+                    <p></p>
+                </div>
+                <div class="exp3">
+                    <h3>IT Technician</h3>
+                    <h4>TechCom Technology | January 2023 - October 2023 (10 months)</h4>
+                    <p>Contracted to work at the Ezequiel Dias Foundation (FUNED), where I was responsible for assisting employees with IT-related questions and problems.</p>
+                </div>
+                <div class="exp4">
+                    <h3>Support Analyst</h3>
+                    <h4>Genyx Solar Power | March 2022 - October 2022 (8 months)</h4>
+                    <p>Responsible for all user support tasks, managing service requests. Created quotations for peripherals and equipment related to general IT needs. Managed asset control. Distributed costs among departments. Managed the entire company network, performing procedures and maintenance as necessary.</p>
+                </div>
+                <div class="exp5">
+                    <h3>Network Technical Support</h3>
+                    <h4>Elite Resorts | November 2018 - July 2020 (1 year 9 months)</h4>
+                    <p>Managed and analyzed the company’s network and IT operations, providing support, training, maintenance, and network configurations.</p>
+                </div>
             </div>
-            <div class="exp2">
-                <h3>Analista de suporte de TI 2</h3>
-                <h4>Dinamica Computer Importação e Exportação Ltda</h4>
-                <p></p>
-            </div>
-            <div class="exp3">
-                <h3>Técnico de informática</h3>
-                <h4>TechCom Tecnologia</h4>
-                <p>Contrato realizado para trabalhar alocado na Fundação Ezequiel dias(FUNED), do qual era responsável pelo atendimento dos funcionários, sobre as dúvidas e problemas relacionados a TI</p>
-            </div>
-            <div class="exp4">
-                <h3>Analista de suporte</h3>
-                <h4>Genyx Solar Power</h4>
-                <p>Era responsável por toda a parte de suporte ao usuário, com suas demandas via chamados.
-                    Realizava cotações de periféricos e equipamentos necessários sobre informática em geral. Fazia controle de patrimônio. Rateio de consumos para os setores. Controlava toda a rede disponível da empresa, realizando procedimentos e manutenção quando necessário.</p>
-            </div>
-        </div>
-        <div class="formacao">
-            <div class="form1">
-                <h3>Centro Universitário Una</h3>
-                <h4>Analise e Desenvolvimento de Sistemas</h4>
-                <h5>01/2023 - Atualmente(Previsão de conclusão 06/2025)</h5>
-                <p>No curso de Análise e Desenvolvimento de Sistemas da Una, foi adquirido conhecimento para a projetar, desenvolver e implementar sistemas de informação, incluindo análise de requisitos, programação, banco de dados e segurança da informação.</p>
-                <p>Desenvolvimento de software</p>
-                <p>Análise de sistemas</p>
-                <p>Gestão de projetos de TI</p>
-            </div>
-            <div class="form2">
-                <h3>Senac Minas</h3>
-                <h4>Redes de Computadores</h4>
-                <h5>01/2017 - 12/2018</h5>
-                <p>Curso Profissionalizante em Redes de computadores. Formando profissionais competentes para realizar as funções relacionadas e correlacionadas com redes. Curso baseado em Cisco iOS, pelo Netacad e com praticas e soluções.</p>
+            <div class="education">
+                <h2>Education</h2>
+                <div class="edu1">
+                    <h3>Systems Analysis and Development</h3>
+                    <h4>Una University Center | 01/2023 - Currently (Expected graduation 06/2025)</h4>
+                    <p>In the Systems Analysis and Development course at Una, knowledge was gained to design, develop, and implement information systems, including requirement analysis, programming, databases, and information security.</p>
+                </div>
+                <div class="edu2">
+                    <h3>Computer Networks</h4>
+                    <h4>Senac Minas | 01/2017 - 12/2018</h4>
+                    <p>Professional course in Computer Networks, preparing competent professionals for tasks related to and involving networks. The course was based on Cisco iOS, through Netacad, with practical applications and solutions.</p>
+                </div>
             </div>
         </div>
     </main>
