modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 Data Analyst | Developer
             </h2>
             <h3 class="contact">
-                <a href="tel:+5531989492805"></a>
-                    <span class="fa fa-phone"></span>
+                <a href="https://wa.me/5531989492805">
+                    <span class="fa fa-whatsapp"></span>
                 </a>
                 <a href="mailto:contato.alvesluis@gmail.com">
                     <span class="fa fa-envelope"></span>
